crates/jig-cli/tests/snapshots/check_integration__check_e2e_clean.snap
---
source: crates/jig-cli/tests/check_integration.rs
expression: redact_latency(&report)
---
jig check · jig-mock-server v0.6.0
protocol 2025-06-18 · rubric-v1.5

  ✓  99 / 100   grade A

  install n/a · boot <s>

  ✓  Protocol compliance  100  [100·100·100]  clean handshake, no stdout pollution, spec-valid capabilities
  ✓  Context cost          99  [43·87·97]     183 tokens (7th percentile of n=29 measured servers — lighter than 93%)
  ✓  Schema hygiene        96  [96·99·100]    `make_reservation`: parameter `party` missing a description (+1 more)
  ✓  Description quality   99  [96·98·99]     heuristic · 3 tool(s) have no human-facing title
  ✓  Robustness           100  [90·95·99]     list <ms>, boot <ms>, clean shutdown

Top fixes
  1. [schema_hygiene] `make_reservation`: parameter `party` missing a description
     → describe each parameter of `make_reservation` so the model can fill it correctly
  2. [schema_hygiene] 3 tool(s) declare no annotations (readOnlyHint, destructiveHint, …)
     → add tool annotations so clients can reason about side effects
  3. [description_quality] 3 tool(s) have no human-facing title
     → add a `title` to each tool for nicer client display

Description quality is heuristic (deterministic, no LLM).
Context cost scored against the bundled census 2026-07-19 (n=29) — 7th percentile.
[p25·median·p75] is where 63 measured servers scored on that dimension — a dimension whose three numbers sit together separates servers little. Not scored.
