crates/jig-cli/tests/snapshots/check_integration__check_e2e_pollution.snap
---
source: crates/jig-cli/tests/check_integration.rs
expression: redact(&report)
---
jig check · jig-mock-server v0.6.0
protocol 2025-06-18 · rubric-v1.5
measured: <mock> --pollute-stdout

  ✓  85 / 100   grade B

  ⓘ  composite capped at 85 by protocol compliance (15 points of high-severity protocol defects): 1 non-protocol line(s) on stdout — this corrupts MCP's newline-delimited framing (would have scored 97)

  install n/a · boot <s>

  ✓  Protocol compliance   85  [100·100·100]  1 non-protocol line(s) on stdout — this corrupts MCP's newline-delimited framing
  ✓  Context cost          99  [43·87·97]     183 tokens as invoked (7th percentile of n=29 measured servers — lighter than 93%)
  ✓  Schema hygiene        96  [96·99·100]    `make_reservation`: parameter `party` missing a description (+1 more)
  ✓  Description quality   99  [96·98·99]     heuristic · 3 tool(s) have no human-facing title
  ✓  Robustness           100  [90·95·99]     list <ms>, boot <ms>, clean shutdown

Top fixes
  1. [protocol] composite capped at 85 by protocol compliance — this server would otherwise score 97
     → fix the high-severity protocol defect above. Until the server frames its own messages correctly, the remaining dimensions describe a server clients cannot talk to
  2. [protocol] 1 non-protocol line(s) on stdout — this corrupts MCP's newline-delimited framing
     → route all logging to stderr; the first polluting line is at byte offset 0: "[startup] mock server li…" (hex 5b 73 74 61 72 74 75 70 5d 20 6d 6f 63 6b 20 73 65 72 76 65 72 20 6c 69…) — stdout must carry only newline-delimited JSON-RPC
  3. [schema_hygiene] `make_reservation`: parameter `party` missing a description
     → describe each parameter of `make_reservation` so the model can fill it correctly

Description quality is heuristic (deterministic, no LLM).
Context cost scored against the bundled census 2026-07-19 (n=29) — 7th percentile.
[p25·median·p75] is where 63 measured servers scored on that dimension — a dimension whose three numbers sit together separates servers little. Not scored.
